--- a/ControleEstoque/Modelos/Modelos.csproj
+++ b/ControleEstoque/Modelos/Modelos.csproj
@@ -49,6 +49,7 @@
   <ItemGroup>
     <Compile Include="Class1.cs" />
     <Compile Include="Estoque.cs" />
+    <Compile Include="ItemProduto.cs" />
     <Compile Include="Produto.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
