--- a/ControleEstoque/Modelos/Modelos.csproj
+++ b/ControleEstoque/Modelos/Modelos.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Class1.cs" />
     <Compile Include="Compra.cs" />
     <Compile Include="Estoque.cs" />
+    <Compile Include="Fornecedor.cs" />
     <Compile Include="ItemProduto.cs" />
     <Compile Include="Produto.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
