--- a/ControleEstoque/Modelos/Modelos.csproj
+++ b/ControleEstoque/Modelos/Modelos.csproj
@@ -54,6 +54,7 @@
     <Compile Include="ItemProduto.cs" />
     <Compile Include="Produto.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Venda.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
