Criando classe (Modelo>DAL) Contexto e Strind de Conexão (App.config)

--- a/ControleEstoque/Modelos/Modelos.csproj
+++ b/ControleEstoque/Modelos/Modelos.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Class1.cs" />
     <Compile Include="Cliente.cs" />
     <Compile Include="Compra.cs" />
+    <Compile Include="DAL\Contexto.cs" />
     <Compile Include="Estoque.cs" />
     <Compile Include="Fornecedor.cs" />
     <Compile Include="ItemProduto.cs" />
