--- a/ControleEstoque/Modelos/Modelos.csproj
+++ b/ControleEstoque/Modelos/Modelos.csproj
@@ -53,7 +53,8 @@
     <Compile Include="DAL\Contexto.cs" />
     <Compile Include="Estoque.cs" />
     <Compile Include="Fornecedor.cs" />
-    <Compile Include="ItemProduto.cs" />
+    <Compile Include="ItemSaida.cs" />
+    <Compile Include="ItemEntrada.cs" />
     <Compile Include="Produto.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Venda.cs" />
