--- a/ControleEstoque/Modelos/Modelos.csproj
+++ b/ControleEstoque/Modelos/Modelos.csproj
@@ -57,6 +57,7 @@
     <Compile Include="ItemEntrada.cs" />
     <Compile Include="Produto.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Recebimento.cs" />
     <Compile Include="Venda.cs" />
   </ItemGroup>
   <ItemGroup>
