--- a/ControleEstoque/ViewWPF/App.config
+++ b/ControleEstoque/ViewWPF/App.config
@@ -17,4 +17,7 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  <connectionStrings>
+    <add name="ModelosContainer" connectionString="Data Source=(localdb)\MSSQLLOCALDB; Initial Catalog=EstoqueDB ;integrated security=True;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
 </configuration>
