--- a/ControleEstoque/Modelos/App.config
+++ b/ControleEstoque/Modelos/App.config
@@ -14,7 +14,6 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-  <connectionStrings>
-    <add name="ModelosContainer" connectionString="Data Source=(localdb)\MSSQLLOCALDB; Initial Catalog=EstoqueDB ;integrated security=True;" providerName="System.Data.EntityClient" />
-  </connectionStrings>
+  
+<connectionStrings><add name="ModelosContainer" connectionString="metadata=res://*/Modelos.csdl|res://*/Modelos.ssdl|res://*/Modelos.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(localdb)\MSSQLLOCALDB;initial catalog=EstoqueDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
 </configuration>
