Implementando ViewModel (TelaProdutoMenuViewModel) / Tornando públicos os métodos da ProdutoController / Setando DataContext na View>TelaProdutoMenu

--- a/ControleEstoque/Modelos/App.config
+++ b/ControleEstoque/Modelos/App.config
@@ -15,5 +15,9 @@
     </providers>
   </entityFramework>
   
-<connectionStrings><add name="ModelosContainer" connectionString="metadata=res://*/Modelos.csdl|res://*/Modelos.ssdl|res://*/Modelos.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(localdb)\MSSQLLOCALDB;initial catalog=EstoqueDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+<connectionStrings>
+  <!--<add name="ModelosContainer" connectionString="metadata=res://*/Modelos.csdl|res://*/Modelos.ssdl|res://*/Modelos.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(localdb)\MSSQLLOCALDB;initial catalog=EstoqueDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
+  <add name="ModelosContainer" connectionString="Data Source=(localdb)\MSSQLLOCALDB; Initial Catalog=EstoqueDB ;integrated security=True;" providerName="System.Data.EntityClient" />
+
+</connectionStrings>
 </configuration>
