--- a/ControleEstoque/Controllers/Controllers.csproj
+++ b/ControleEstoque/Controllers/Controllers.csproj
@@ -54,5 +54,11 @@
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Modelos\Modelos.csproj">
+      <Project>{0732553c-c26d-4c66-8eb0-ce06cb92be15}</Project>
+      <Name>Modelos</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
