Implementando TelaInventario para consulta de produtos em estoque

--- a/ControleEstoque/Controllers/Controllers.csproj
+++ b/ControleEstoque/Controllers/Controllers.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Class1.cs" />
     <Compile Include="ClienteController.cs" />
     <Compile Include="FornecedorController.cs" />
+    <Compile Include="InventarioController.cs" />
     <Compile Include="ProdutoController.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
