--- a/ControleEstoque/ViewWPF/ViewWPF.csproj
+++ b/ControleEstoque/ViewWPF/ViewWPF.csproj
@@ -63,6 +63,7 @@
     </ApplicationDefinition>
     <Compile Include="ViewModels\TelaClientesViewModel.cs" />
     <Compile Include="ViewModels\TelaFornecedoresViewModel.cs" />
+    <Compile Include="ViewModels\TelaInventarioViewModel.cs" />
     <Compile Include="ViewModels\TelaProdutosViewModel.cs" />
     <Compile Include="Views\TelaClientes.xaml.cs">
       <DependentUpon>TelaClientes.xaml</DependentUpon>
