--- a/ControleEstoque/Controllers/Controllers.csproj
+++ b/ControleEstoque/Controllers/Controllers.csproj
@@ -47,12 +47,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
     <Compile Include="ClienteController.cs" />
     <Compile Include="FornecedorController.cs" />
     <Compile Include="InventarioController.cs" />
     <Compile Include="ProdutoController.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="VendaController.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
