Criando nova branch (Loja_CodeFirst) para testes com CodeFirst / Recriando tabelas com CodeFirst

--- a/ControleEstoque/ViewWPF/App.config
+++ b/ControleEstoque/ViewWPF/App.config
@@ -19,6 +19,13 @@
   </entityFramework>
   <connectionStrings>
     <add name="ModelosContainer"
+         connectionString="data source=(LocalDb)\MSSQLLocalDB;
+         initial catalog=LojaDB;
+         integrated security=True;
+         MultipleActiveResultSets=True;
+         App=EntityFramework"
+         providerName="System.Data.SqlClient" />
+    <!--<add name="ModelosContainer"
          connectionString="metadata=res://*/Modelos.csdl|res://*/Modelos.ssdl|res://*/Modelos.msl;
          provider=System.Data.SqlClient;
          provider connection string=&quot;
@@ -26,6 +33,6 @@
          initial catalog=LojaDB;
          integrated security=True;
          MultipleActiveResultSets=True;
-         App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+         App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
   </connectionStrings>
 </configuration>
