--- a/ControleEstoque/Modelos/App.config
+++ b/ControleEstoque/Modelos/App.config
@@ -15,6 +15,12 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="ModelosContainer" connectionString="metadata=res://*/Modelos.csdl|res://*/Modelos.ssdl|res://*/Modelos.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(localdb)\MSSQLLOCALDB;initial catalog=LojaDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="ModelosContainer" 
+         connectionString="data source=(LocalDb)\MSSQLLocalDB;
+         initial catalog=LojaDB;
+         integrated security=True;
+         MultipleActiveResultSets=True;
+         App=EntityFramework" 
+         providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
