--- a/ControleEstoque/Modelos/Modelos.csproj
+++ b/ControleEstoque/Modelos/Modelos.csproj
@@ -4,7 +4,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{0732553C-C26D-4C66-8EB0-CE06CB92BE15}</ProjectGuid>
+    <ProjectGuid>{BC0B1899-31BD-485A-87B5-D860DDA446D9}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Modelos</RootNamespace>
@@ -49,79 +49,22 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Cliente.cs">
-      <DependentUpon>Modelos.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Fornecedor.cs">
-      <DependentUpon>Modelos.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Inventario.cs">
-      <DependentUpon>Modelos.tt</DependentUpon>
-    </Compile>
-    <Compile Include="ItemInventario.cs">
-      <DependentUpon>Modelos.tt</DependentUpon>
-    </Compile>
-    <Compile Include="ItemNotaEntrada.cs">
-      <DependentUpon>Modelos.tt</DependentUpon>
-    </Compile>
-    <Compile Include="ItemNotaSaida.cs">
-      <DependentUpon>Modelos.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Modelos.Context.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Modelos.Context.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Modelos.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Modelos.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Modelos.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Modelos.edmx</DependentUpon>
-    </Compile>
-    <Compile Include="NotaEntrada.cs">
-      <DependentUpon>Modelos.tt</DependentUpon>
-    </Compile>
-    <Compile Include="NotaSaida.cs">
-      <DependentUpon>Modelos.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Produto.cs">
-      <DependentUpon>Modelos.tt</DependentUpon>
-    </Compile>
+    <Compile Include="Cliente.cs" />
+    <Compile Include="DAL\ModelosContainer.cs" />
+    <Compile Include="Fornecedor.cs" />
+    <Compile Include="Inventario.cs" />
+    <Compile Include="ItemInventario.cs" />
+    <Compile Include="ItemNotaEntrada.cs" />
+    <Compile Include="ItemNotaSaida.cs" />
+    <Compile Include="NotaEntrada.cs" />
+    <Compile Include="NotaSaida.cs" />
+    <Compile Include="Produto.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Recebimento.cs">
-      <DependentUpon>Modelos.tt</DependentUpon>
-    </Compile>
+    <Compile Include="Recebimento.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-    <EntityDeploy Include="Modelos.edmx">
-      <Generator>EntityModelCodeGenerator</Generator>
-      <LastGenOutput>Modelos.Designer.cs</LastGenOutput>
-    </EntityDeploy>
-    <None Include="Modelos.edmx.diagram">
-      <DependentUpon>Modelos.edmx</DependentUpon>
-    </None>
     <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="Modelos.Context.tt">
-      <Generator>TextTemplatingFileGenerator</Generator>
-      <LastGenOutput>Modelos.Context.cs</LastGenOutput>
-      <DependentUpon>Modelos.edmx</DependentUpon>
-    </Content>
-    <Content Include="Modelos.edmx.sql" />
-    <Content Include="Modelos.tt">
-      <Generator>TextTemplatingFileGenerator</Generator>
-      <LastGenOutput>Modelos.cs</LastGenOutput>
-      <DependentUpon>Modelos.edmx</DependentUpon>
-    </Content>
-  </ItemGroup>
-  <ItemGroup>
-    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
