Alterações nas interações da classe inventário

--- a/ControleEstoque/Modelos/App.config
+++ b/ControleEstoque/Modelos/App.config
@@ -15,6 +15,17 @@
     </providers>
   </entityFramework>
   <connectionStrings>
+    <add name="ModelosContainer"  
+         
+         connectionString=
+         "Data Source=(localdb)\MSSQLLOCALDB;
+         Initial Catalog=LojaDb;
+         Integrated Security=True"
+         
+         providerName="System.Data.SqlClient"
+         />
+  </connectionStrings>
+  <!--<connectionStrings>
     <add name="ModelosContainer" 
          connectionString="data source=(LocalDb)\MSSQLLocalDB;
          initial catalog=LojaDB;
@@ -22,5 +33,5 @@
          MultipleActiveResultSets=True;
          App=EntityFramework" 
          providerName="System.Data.SqlClient" />
-  </connectionStrings>
+  </connectionStrings>-->
 </configuration>
