--- a/ControleEstoque/ViewWPF/App.config
+++ b/ControleEstoque/ViewWPF/App.config
@@ -19,11 +19,22 @@
   </entityFramework>
   <connectionStrings>
     <add name="ModelosContainer"
+         
+         connectionString=
+         "Data Source=(localdb)\MSSQLLOCALDB;
+         Initial Catalog=LojaDb;
+         Integrated Security=True"
+         
+         providerName="System.Data.SqlClient"
+         />
+  </connectionStrings>
+  <!--<connectionStrings>
+    <add name="ModelosContainer" 
          connectionString="data source=(LocalDb)\MSSQLLocalDB;
          initial catalog=LojaDB;
          integrated security=True;
          MultipleActiveResultSets=True;
-         App=EntityFramework"
+         App=EntityFramework" 
          providerName="System.Data.SqlClient" />
-  </connectionStrings>
+  </connectionStrings>-->
 </configuration>
