--- a/ControleEstoque/ViewWPF/ViewWPF.csproj
+++ b/ControleEstoque/ViewWPF/ViewWPF.csproj
@@ -62,6 +62,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="ViewModels\TelaClientesViewModel.cs" />
+    <Compile Include="ViewModels\TelaComprasViewModel.cs" />
     <Compile Include="ViewModels\TelaFornecedoresViewModel.cs" />
     <Compile Include="ViewModels\TelaInventarioViewModel.cs" />
     <Compile Include="ViewModels\TelaProdutosViewModel.cs" />
